finished evaluation small fixes

--- a/css/style.css
+++ b/css/style.css
@@ -604,7 +604,7 @@ closeIconStyle:hover{
   visibility: hidden;
   width: 90%;
 }
-#send-form-fill-course {
+#send-form-fill-course, #send-form-fill-course-two {
   height: 5vh;
   width: 6vw;
   background-color: #006ABF;
